--- a/style.css
+++ b/style.css
@@ -1,6 +1,83 @@
-*{
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-    
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+}
+html,
+body {
+  font-family: "Work Sans", sans-serif;
+}
+
+/* ! Header container style start */
+
+.header-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 1600px;
+  height: 800px;
+  background-image: url("images/banner/banner1.png");
+  background-size: contain;
+}
+.title-container {
+  margin-right: 256px;
+}
+.header-title {
+  color: #151414;
+  text-align: right;
+  font-size: 65px;
+  font-weight: 700;
+}
+.header-para {
+  color: var(--dark-02, #444343);
+  text-align: right;
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+}
+.header-button {
+  width: 160px;
+  height: 50px;
+  border-radius: 5px;
+  background: #f15b22;
+  color: #fff;
+  margin-left: 305px;
+  margin-top: 15px;
+}
+
+/* ! Hero section style start */
+.hero-section {
+  margin: 100px 0px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.hero-section-left {
+  width: 327.929px;
+  height: 327.929px;
+  border-radius: 427.929px;
+  background: rgba(241, 91, 34, 0.2);
+}
+.hero-image {
+  height: 427.929px;
+  margin-top: -100px;
+}
+.hero-title {
+  color: #151414;
+  font-size: 40px;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+.hero-pera {
+  color:#444343;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+}
+.hero-list li{
+    list-style: none;
+    margin-top: 15px;
+    color:  #444343;
 }
