--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ body {
 .header-button {
   width: 160px;
   height: 50px;
+  border: 0px;
+  font-size: 17px;
   border-radius: 5px;
   background: #f15b22;
   color: #fff;
@@ -49,7 +51,7 @@ body {
 
 /* ! Hero section style start */
 .hero-section {
-  margin: 100px 0px;
+  margin: 150px 0px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -71,13 +73,54 @@ body {
   margin-bottom: 15px;
 }
 .hero-pera {
-  color:#444343;
+  color: #444343;
   font-size: 16px;
   font-weight: 400;
   line-height: 26px;
 }
-.hero-list li{
-    list-style: none;
-    margin-top: 15px;
-    color:  #444343;
+.hero-list li {
+  list-style: none;
+  margin-top: 15px;
+  color: #444343;
+}
+/* ! Section two style start here */
+
+.section-two-heading {
+  color: #151414;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.section-image-container {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 0 auto;
+  width: 1140px;
+  margin-bottom: 100px;
+}
+.container-one,img{
+    margin-right: 
+}
+.image-title {
+  color: #151414;
+  text-align: center;
+  font-size: 25px;
+  font-weight: 700;
+}
+.mini-caption {
+  color: #737272;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 500;
+}
+/* ! Section three start */
+.section-img-container{
+    width: 1140px;
+    height: 300px;
+    margin: 0 auto;
+    border-radius: 5px;
+    background-image: linear-gradient(to right,rgba(255,0,0,1), rgba(255,0,0,0)), url("images/watch.png");
+    margin-bottom: 100px;
 }
