--- a/style.css
+++ b/style.css
@@ -137,10 +137,36 @@ img {
   padding-top: 59px;
   padding-left: 64px;
 }
-.btn{
-    margin-top: 30px;
-    margin-left: 68px;
-    padding: 15px 30px;
-    color: #f15b22;
-    font-weight: 600;
+.btn {
+  margin-top: 30px;
+  margin-left: 68px;
+  padding: 15px 30px;
+  color: #f15b22;
+  font-weight: 600;
+}
+/* ! footer style start here */
+.footer-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100vw;
+  height: 577px;
+  background: #151414;
+}
+
+.footer-left {
+  color: #fff;
+}
+.left-footer-title {
+  color: #f8f8f8;
+  font-size: 45px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.left-footer-pera {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  margin-bottom: 10px;
 }
