--- a/style.css
+++ b/style.css
@@ -161,12 +161,39 @@ img {
   color: #f8f8f8;
   font-size: 45px;
   font-weight: 700;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 .left-footer-pera {
   color: #fff;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
+}
+.social-icon,
+img {
+  margin-top: 15px;
+  gap: 15px;
+}
+
+/* ! footer right div style here */
+
+.right-footer-title {
+  color: #fff;
+  font-size: 25px;
+  font-weight: 600;
+  margin-bottom: 25px;
+}
+.footer-right>input{
+    color: #fff;
+    background-color:#151414;
+    padding: 10px 10px;
+    border: 1px solid #f8f8f8;
+}
+.sbs-btn{
+    display: block;
+    margin-top: 15px;
+    padding: 10px 15px;
+    color: #f15b22;
+    font-weight: 600;
 }
